XO_Project_UAT/Project--XOGrp--UAT/src/objects/Quota__c.object
<CustomObject>
    <fields>
        <fullName>Direct_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Direct Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indirect_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indirect Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <globalPicklist>Month</globalPicklist>
        <label>Month</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>New Internet Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Upsell Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Renewal Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet BoB Quota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Print Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Renewal Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print BoB Quota</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quota_Date__c</fullName>
        <description>User for querying / reporting</description>
        <label>Quota Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Quota</label>
        <referenceTo>Quota__c</referenceTo>
        <relationshipLabel>Quotas</relationshipLabel>
        <relationshipName>Child_Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quota</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Quota - {000000}</displayFormat>
        <label>Quota Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>